--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SportSphere Live</title>
-    <link rel="stylesheet" href="style.css">
+    <title>RapidScores Live</title>
+    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="logo.png" alt="SportSphere Logo" class="logo-image">
-                <h1 class="logo">SportSphere</h1>
+                <img src="logo.png" alt="RapidScores Logo" class="logo-image">
+                <h1 class="logo">RapidScores</h1>
             </div>
-            <div class="live-time" id="live-time"></div>
+            <div class="live-time" id="live-time">Live: <span id="current-time"></span></div>
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home">Startseite</a></li>
                     <li><a href="#fussball">Fußball</a></li>
                     <li><a href="#basketball">Basketball</a></li>
+                    <li><a href="#stats">Statistiken</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </nav>
@@ -60,7 +61,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <p>&copy; 2024 SportSphere. Alle Rechte vorbehalten.</p>
+            <p>&copy; 2024 RapidScores. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
 </body>
