--- a/index.html
+++ b/index.html
@@ -11,40 +11,42 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="logo.png" alt="RapidScores Logo" class="logo-image">
+                <img src="images/new-logo.png" alt="RapidScores Logo" class="logo-image">
                 <h1 class="logo">RapidScores</h1>
             </div>
-            <div class="live-time" id="live-time">Live: <span id="current-time"></span></div>
+            <div class="live-time" id="live-time"></div>
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#home">Startseite</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#fussball">Fußball</a></li>
                     <li><a href="#basketball">Basketball</a></li>
-                    <li><a href="#stats">Statistiken</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section id="live-scores">
-            <div class="section-header">
-                <h2>Fußball Live-Ticker</h2>
-                <div class="filter-options">
-                    <label for="leagueFilter">Wähle eine Liga:</label>
-                    <select id="leagueFilter">
-                        <option value="">Alle Ligen</option>
-                        <option value="Germany">Deutschland</option>
-                        <option value="England">England</option>
-                        <option value="Spain">Spanien</option>
-                        <option value="Italy">Italien</option>
-                    </select>
-                </div>
+        <aside class="sidebar">
+            <div class="filter-options">
+                <h3>Länder und Ligen</h3>
+                <label for="leagueFilter">Wähle eine Liga:</label>
+                <select id="leagueFilter">
+                    <option value="">Alle Ligen</option>
+                    <option value="Germany">Deutschland</option>
+                    <option value="England">England</option>
+                    <option value="Spain">Spanien</option>
+                    <option value="Italy">Italien</option>
+                </select>
                 <div class="filter-favorites">
                     <label for="showFavorites">
                         <input type="checkbox" id="showFavorites"> Nur Favoriten anzeigen
                     </label>
                 </div>
+            </div>
+        </aside>
+        <section id="live-scores">
+            <div class="section-header">
+                <h2>Fußball Live-Ticker</h2>
             </div>
             <div class="scores-list">
                 <!-- Live Scores werden hier dynamisch geladen -->
